fixed scrollbar

--- a/src/20.3-Mint-Y-Luka/gtk-3.0/sass/_common.scss
+++ b/src/20.3-Mint-Y-Luka/gtk-3.0/sass/_common.scss
@@ -1892,7 +1892,8 @@ scrollbar {
   }
 
   $_slider_min_length: 40px;
-  border: 1px solid transparent;
+
+  terminal-screen-container & { border: 1px solid transparent; }
   background-color: $_scrollbar_bg_color;
   transition: 300ms $ease-out-quad;
 
